--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -5831,5 +5831,24 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "UI.windows.elements.label.stats":{
+        "en":"Elemental Stats",
+        "fr":"Statistiques Élémentaire",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
