--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -5850,5 +5850,575 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "UI.windows.elements.fire.bonus_10":{
+        "en":"Lv10: +1000 HP, Elemental Attack raised by 300 points",
+        "fr":"Nv10: +1000 PV, Attaque Élémentaire augmenté de 300 points",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.fire.bonus_20":{
+        "en":"Lv20: +2000 HP, Elemental Attack raised by 700 points",
+        "fr":"Nv20: +2000 PV, Attaque Élémentaire augmenté de 700 points",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.fire.bonus_30":{
+        "en":"Lv30: +7000 HP, Elemental Attack raised by 1500 points",
+        "fr":"Nv30: +7000 PV, Attaque Élémentaire augmenté de 1500 points",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.fire.bonus_40":{
+        "en":"Lv40: +10 000 HP, Elemental Attack raised by 1500 points",
+        "fr":"Nv40: +10 000 PV, Attaque Élémentaire augmenté de 1500 points",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.fire.bonus_50":{
+        "en":"Lv50: +15 000 HP, Elemental Attack raised by 2000 points",
+        "fr":"Nv50: +15 000 PV, Attaque Élémentaire augmenté de 2000 points",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.fire.bonus_60":{
+        "en":"Lv60: +20 000 HP, Elemental Attack raised by 3000 points",
+        "fr":"Nv60: +20 000 PV, Attaque Élémentaire augmenté de 3000 points",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.ice.bonus_10":{
+        "en":"Lv10: +1000 HP, Elemental Defence raised by 300 points",
+        "fr":"Nv10: +1000 PV, Défense Élémentaire augmenté de 300 points",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.ice.bonus_20":{
+        "en":"Lv20: +2000 HP, Elemental Defence raised by 700 points",
+        "fr":"Nv20: +2000 PV, Défense Élémentaire augmenté de 700 points",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.ice.bonus_30":{
+        "en":"Lv30: +7000 HP, Elemental Defence raised by 1500 points",
+        "fr":"Nv30: +7000 PV, Défense Élémentaire augmenté de 1500 points",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.ice.bonus_40":{
+        "en":"Lv40: +10 000 HP, Elemental Defence raised by 1500 points",
+        "fr":"Nv40: +10 000 PV, Défense Élémentaire augmenté de 1500 points",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.ice.bonus_50":{
+        "en":"Lv50: +15 000 HP, Elemental Defence raised by 2000 points",
+        "fr":"Nv50: +15 000 PV, Défense Élémentaire augmenté de 2000 points",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.ice.bonus_60":{
+        "en":"Lv60: +20 000 HP, Elemental Defence raised by 3000 points",
+        "fr":"Nv60: +20 000 PV, Défense Élémentaire augmenté de 3000 points",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.lightning.bonus_10":{
+        "en":"Lv10: +1000 HP, Elemental Crit Rate raised by 2%",
+        "fr":"Nv10: +1000 PV, Taux de Critique Élémentaire augmenté de 2%",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.lightning.bonus_20":{
+        "en":"Lv20: +2000 HP, Elemental Crit Rate raised by 4%",
+        "fr":"Nv20: +2000 PV, Taux de Critique Élémentaire augmenté de 4%",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.lightning.bonus_30":{
+        "en":"Lv30: +7000 HP, Elemental Crit Rate raised by 6%",
+        "fr":"Nv30: +7000 PV, Taux de Critique Élémentaire augmenté de 6%",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.lightning.bonus_40":{
+        "en":"Lv40: +10 000 HP, Elemental Crit Rate raised by 18%",
+        "fr":"Nv40: +10 000 PV, Taux de Critique Élémentaire augmenté de 18%",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.lightning.bonus_50":{
+        "en":"Lv50: +15 000 HP, Elemental Crit Rate raised by 40%",
+        "fr":"Nv50: +15 000 PV, Taux de Critique Élémentaire augmenté de 40%",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.lightning.bonus_60":{
+        "en":"Lv60: +20 000 HP, Elemental Crit Rate raised by 60%",
+        "fr":"Nv60: +20 000 PV, Taux de Critique Élémentaire augmenté de 60%",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.darkness.bonus_10":{
+        "en":"Lv10: +1000 HP, Elemental Attack raised by 300, Elemental Healing +100",
+        "fr":"Nv10: +1000 PV, Attaque Élémentaire augmenté de 300 points, Soin Élémentaire +100",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.darkness.bonus_20":{
+        "en":"Lv20: +2000 HP, 5% chance of enhanced damage being raised by 15%, Elemental Healing +500",
+        "fr":"Nv20: +2000 PV, 5% de chance de gagner 15% de dégâts amélioré, Soin Élémentaire +300",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.darkness.bonus_30":{
+        "en":"Lv30: +7000 HP, 5% chance of enhanced damage being raised by 35%, Elemental Healing +1000",
+        "fr":"Nv30: +7000 PV, 5% de chance de gagner 35% de dégâts amélioré, Soin Élémentaire +300",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.darkness.bonus_40":{
+        "en":"Lv40: +10 000 HP, 5% chance of enhanced damage being raised by 55%, Elemental Healing +2000",
+        "fr":"Nv40: +10 000 PV, 5% de chance de gagner 55% de dégâts amélioré, Soin Élémentaire +300",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.darkness.bonus_50":{
+        "en":"Lv50: +15 000 HP, 5% chance of enhanced damage being raised by 75%, Elemental Healing +5000",
+        "fr":"Nv50: +15 000 PV, 5% de chance de gagner 75% de dégâts amélioré, Soin Élémentaire +300",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.darkness.bonus_60":{
+        "en":"Lv60: +20 000 HP, 5% chance of enhanced damage being raised by 95%, Elemental Healing +10 000",
+        "fr":"Nv60: +20 000 PV, 5% de chance de gagner 95% de dégâts amélioré, Soin Élémentaire +300",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.light.bonus_10":{
+        "en":"Lv10: +1000 HP, Elemental Attack raised by 300, Elemental Healing +100",
+        "fr":"Nv10: +1000 PV, Attaque Élémentaire augmenté de 300 points, Soin Élémentaire +100",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.light.bonus_20":{
+        "en":"Lv20: +2000 HP, 5% chance of damage reduction being raised by 15%, Elemental Healing +500",
+        "fr":"Nv20: +2000 PV, 5% de chance de gagner 15% de réduction de dégâts, Soin Élémentaire +300",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.light.bonus_30":{
+        "en":"Lv30: +7000 HP, 5% chance of damage reduction being raised by 45%, Elemental Healing +1000",
+        "fr":"Nv30: +7000 PV, 5% de chance de gagner 45% de réduction de dégâts, Soin Élémentaire +300",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.light.bonus_40":{
+        "en":"Lv40: +10 000 HP, 5% chance of damage reduction being raised by 75%, Elemental Healing +2000",
+        "fr":"Nv40: +10 000 PV, 5% de chance de gagner 75% de réduction de dégâts, Soin Élémentaire +300",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.light.bonus_50":{
+        "en":"Lv50: +15 000 HP, 5% chance of damage reduction being raised by 110%, Elemental Healing +5000",
+        "fr":"Nv50: +15 000 PV, 5% de chance de gagner 110% de réduction de dégâts, Soin Élémentaire +300",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.light.bonus_60":{
+        "en":"Lv60: +20 000 HP, 5% chance of damage reduction being raised by 150%, Elemental Healing +10 000",
+        "fr":"Nv60: +20 000 PV, 5% de chance de gagner 150% de réduction de dégâts, Soin Élémentaire +300",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
