--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -5832,6 +5832,101 @@
         "th":"",
         "id":""
     },
+    "UI.windows.elements.description.fire":{
+        "en":"It’s basic Elemental Damage. It adds extra damage to ALL your attacks as Elemental Damage. Elemental damage is not related to any other stats and is only affected by the elemental stats.",
+        "fr":"Ce sont des Dégâts Élémentaires de base. Il ajoute des dégâts supplémentaires à TOUTES vos attaques en tant que dégâts élémentaires. Les dégâts élémentaires ne sont liés à aucune autre statistique et ne sont affectés que par les statistiques élémentaires.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.description.ice":{
+        "en":"It’s basic Elemental Defence. It allows you to reduce Elemental Damage from your opponents. It’s the counterpart of the Fire Element which increases Elemental Damage. Monsters don’t have Elemental Damage.",
+        "fr":"C'est la Défense Élémentaire de base. Il vous permet de réduire les dégâts élémentaires de vos adversaires. C'est le pendant de l'élément feu qui augmente les dégâts élémentaires. Les monstres n'ont pas de dégâts élémentaires.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.description.lightning":{
+        "en":"Lightning increases the critical hit rate of your Elemental Damage",
+        "fr":"La foudre augmente le taux de coup critique de vos dégâts élémentaires",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.description.darkness":{
+        "en":"Darkness increases your Critical Elemental Damage. Critical hits also increases the healing power of your Light Element.",
+        "fr":"Les ténèbre augmentent vos dégâts élémentaires critiques. Les coups critiques augmentent également le pouvoir de guérison de votre élément de lumière.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.elements.description.light":{
+        "en":"Light gives a minor healing on activation. The chance of it activating depends on the level of your Lightning Element.",
+        "fr":"La lumière donne une guérison mineure à l'activation. La chance qu'il s'active dépend du niveau de votre élément de foudre.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.elements.label.stats":{
         "en":"Elemental Stats",
         "fr":"Statistiques Élémentaire",
