--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -4730,6 +4730,44 @@
         "th":"",
         "id":""
     },
+    "UI.windows.challenges.KNIGHTS_TRIAL.name":{
+        "en":"Knights Trial",
+        "fr":"Épreuve des chevaliers",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.challenges.KNIGHTS_TRIAL.description":{
+        "en":"Go to Cain Knights Trial ground and talk to Tio, then complete the Knights Trial to get the daily elements reward.",
+        "fr":"Rendez-vous sur le terrain de l'épreuve des chevaliers de Kane et parlez à Tio, puis terminez les épreuves pour obtenir la récompense élémentaire quotidienne.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.ranking.title":{
         "en":"Ranking",
         "fr":"Classement",
