--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -4768,6 +4768,158 @@
         "th":"",
         "id":""
     },
+    "UI.windows.challenges.SUBTERRANEAN_COLISEUM.name":{
+        "en":"Subterranean Coliseum",
+        "fr":"Colisée souterrain",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.challenges.SUBTERRANEAN_COLISEUM.description":{
+        "en":"Go to Letin city and talk to the Arena Manager to take the Subterranean Coliseum daily challenge quest.",
+        "fr":"Rendez-vous dans la ville de Letin et parlez au responsable de l'arène pour relever le défi quotidien du Colisée Souterrain.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.challenges.SEA_BOTTOM_ARENA.name":{
+        "en":"Sea Bottom Arena",
+        "fr":"Arène du fond marin",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.challenges.SEA_BOTTOM_ARENA.description":{
+        "en":"Go to Siren City and talk to Brawl Ground Manager to take the Daily Challenge quest.",
+        "fr":"Allez à la ville des sirènes et parlez au responsable du terrain de joute pour relever le défi quotidien de l'Arène du fond marin.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.challenges.HALO_COLISEUM.name":{
+        "en":"Halo Coliseum",
+        "fr":"Colisée du Halo",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.challenges.HALO_COLISEUM.description":{
+        "en":"Go to Remote Village and talk to the Arena Teleporter to take the Halo Coliseum Daily Challenge quest.",
+        "fr":"Rendez-vous dans un Village Lointain et parlez au Téléporteur de l'arène pour relever le défi quotidien du Colisée du Halo.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.challenges.DEMONS_PRISON.name":{
+        "en":"Demons Prison",
+        "fr":"Prison des Démons",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.challenges.DEMONS_PRISON.description":{
+        "en":"...",
+        "fr":"...",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.ranking.title":{
         "en":"Ranking",
         "fr":"Classement",
