--- a/Translation/item.json
+++ b/Translation/item.json
@@ -2792,6 +2792,25 @@
         "th":"",
         "id":""
     },
+    "item.1300.name":{
+        "en":"Dragon Wings",
+        "fr":"Ailes de Dragon",
+        "es":"",
+        "ch":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.2000.name":{
         "en":"Foxhound - Belt",
         "fr":"Foxhound - Ceinture",
