--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -4742,7 +4742,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thử Thách Của Hiệp Sĩ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4761,7 +4761,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đi đến chỗ Thử Thách Của Hiệp Sĩ Cain và nói chuyện với Tio, sau đó hoàn thành Thử Thách Của Hiệp Sĩ để nhận phần thưởng nguyên tố hàng ngày.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4780,7 +4780,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đấu Trường Ngầm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4799,7 +4799,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đi đến thành phố Letin và nói chuyện với Quản Lý Đấu Trường để nhận nhiệm vụ hàng ngày Đấu Trường Ngầm.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4818,7 +4818,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đấu Trường Đáy Biển",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4837,7 +4837,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đi đến thành phố Siren và nói chuyện với Chiến Địa Quản Lý để nhận nhiệm vụ hàng ngày Đấu Trường Đáy Biển.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4856,7 +4856,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đấu Trường Danh Vọng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4875,7 +4875,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đi đến Làng Hẻo Lánh và nói chuyện với Nhà Chuyển Dịch Đấu Trường để nhận nhiệm vụ hàng ngày Đấu Trường Danh Vọng.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4894,7 +4894,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Quỷ Ngục",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4913,7 +4913,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"...",
         "ar":"",
         "it":"",
         "pl":"",
