--- a/Translation/item.json
+++ b/Translation/item.json
@@ -2804,7 +2804,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Long Dực",
         "ar":"",
         "it":"",
         "pl":"",
