--- a/Translation/map.json
+++ b/Translation/map.json
@@ -1043,5 +1043,24 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "map.Challenge_35.name":{
+        "en":"Cain Knight's Trial Ground",
+        "fr":"Zone d'entrainement des chevaliers de Kane",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
