--- a/Translation/map.json
+++ b/Translation/map.json
@@ -562,7 +562,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Địa Điểm Trại Hải Tặc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -581,7 +581,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Trại Hải Tặc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -600,7 +600,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sào Huyệt Hải Tặc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1056,7 +1056,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Địa Điểm Thử Thách Hiệp Sĩ Thành Cain",
         "ar":"",
         "it":"",
         "pl":"",
