--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -4761,7 +4761,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Đi đến chỗ Thử Thách Của Hiệp Sĩ Cain và nói chuyện với Tio, sau đó hoàn thành Thử Thách Của Hiệp Sĩ để nhận phần thưởng nguyên tố hàng ngày.",
+        "vi":"Đi đến Địa Điểm Thử Thách Của Hiệp Sĩ Thành Cain và nói chuyện với Tio, sau đó hoàn thành Thử Thách Của Hiệp Sĩ để nhận phần thưởng nguyên tố hàng ngày.",
         "ar":"",
         "it":"",
         "pl":"",
