--- a/Translation/map.json
+++ b/Translation/map.json
@@ -1056,7 +1056,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Địa Điểm Thử Thách Hiệp Sĩ Thành Cain",
+        "vi":"Địa Điểm Thử Thách Của Hiệp Sĩ Thành Cain",
         "ar":"",
         "it":"",
         "pl":"",
